--- a/press-item.html
+++ b/press-item.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686835520819">
+		<link rel="stylesheet" href="./css/main.css?v=1686841127694">
 	</head>
 	<body>
 		<!-- Header-->
@@ -305,29 +305,27 @@
 						<ul class="footer__nav-list">
 							<li class="footer__nav-elem"><a class="footer__nav-link footer__nav-link--active" href="#">Fashion</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Telecom</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Helthcare</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Healthcare</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Автомотив</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">POSM маркетинг</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">POSM</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">FMCG</a></li>
 						</ul>
 						<ul class="footer__logo-list footer__logo-list--desktop">
-							<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-squares.svg" alt="Major"></a></li>
-							<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-e.png" alt="Major"></a></li>
+							<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-t.png" alt="Major"></a></li>
+							<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-m.png" alt="Major"></a></li>
 						</ul>
 					</div>
 					<!-- Nav col-->
 					<div class="footer__col">
 						<p class="footer__nav-title">Услуги</p>
 						<ul class="footer__nav-list">
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Упаковка</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Фуллфилмент</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Ответственное хранение</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Таможенный склад</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Складская обработка</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Копакинг</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Производственная логистика</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Фулфилмент</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Маркировка Честный знак</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Кросс-докинг</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Еще услуга</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Еще название услуги</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Еще название услуги</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Еще название услуги</a></li>
 						</ul>
 					</div>
 					<!-- Nav col-->
@@ -336,35 +334,34 @@
 						<ul class="footer__nav-list footer__nav-list--show-laptop">
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">О нас</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Кейсы</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Пресс-релизы</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Наши склады</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Новости</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Терминалы</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Контакты</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Преимущества</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Наши вакансии</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Вебинары</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Карьера</a></li>
 						</ul>
 					</div>
 					<!-- Contact col-->
 					<div class="footer__col"><a class="footer__logo-link" href="/"><img class="footer__logo" src="images/common/logo-major-terminal.svg" alt="Major"></a>
-						<div class="footer__links-box"><a class="footer__link" href="tel:84957376006">8 (495) 737 60 06</a><a class="footer__link" href="mailto:info@major-terminal.ru">info@major-terminal.ru</a></div><a class="footer__link-contacts" href="/">Связаться с нами</a>
-						<div class="footer__social-box">
-							<div class="footer__social-wrapper">
-								<p class="footer__text">Мы в социальных сетях</p>
-								<ul class="footer__social social">
-									<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Youtube">
-											<svg class="social__link-icon">
-												<use xlink:href="#youtube"></use>
-											</svg></a></li>
-									<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Telegram">
-											<svg class="social__link-icon">
-												<use xlink:href="#telegram"></use>
-											</svg></a></li>
-								</ul>
-							</div>
-							<ul class="footer__logo-list footer__logo-list--mobile">
-								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-squares.svg" alt="Major"></a></li>
-								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-e.png" alt="Major"></a></li>
-							</ul>
-						</div>
+						<div class="footer__links-box"><a class="footer__link" href="tel:84957376006">8 (495) 737 60 06</a><a class="footer__link" href="mailto:sales_mt@mjr.ru">sales_mt@mjr.ru</a></div><a class="footer__link-contacts" href="/">Связаться с нами</a>
+						<!--.footer__social-box
+						.footer__social-wrapper
+							p.footer__text Мы в социальных сетях
+							ul.footer__social.social
+								li.social__elem
+									a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Youtube")
+										+svg("youtube", true)(class="social__link-icon")
+								li.social__elem
+									a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Telegram")
+										+svg("telegram", true)(class="social__link-icon")
+						ul.footer__logo-list.footer__logo-list--mobile
+							li.footer__logo-list-elem
+								a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
+									img.footer__logo-list-img(src="images/common/logo-major-squares.svg", alt="Major")
+							li.footer__logo-list-elem
+								a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
+									img.footer__logo-list-img(src="images/common/logo-major-e.png", alt="Major")
+						-->
 					</div>
 				</div>
 				<!-- Copyright-->
@@ -377,10 +374,14 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686835520820"></script>
-		<script src="./js/main.js?v=1686835520820"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686841127695"></script>
+		<script src="./js/main.js?v=1686841127695"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
+	</symbol>
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="download">
+		<path d="M20 16.7428C21.2215 15.734 22 14.2079 22 12.5C22 9.46243 19.5376 7 16.5 7C16.2815 7 16.0771 6.886 15.9661 6.69774C14.6621 4.48484 12.2544 3 9.5 3C5.35786 3 2 6.35786 2 10.5C2 12.5661 2.83545 14.4371 4.18695 15.7935" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+		<path d="M8 16L12 12M12 12L16 16M12 12V21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="file-download">
 		<path d="M16.59 10H15V5C15 4.45 14.55 4 14 4H10C9.45 4 9 4.45 9 5V10H7.41C6.52 10 6.07 11.08 6.7 11.71L11.29 16.3C11.68 16.69 12.31 16.69 12.7 16.3L17.29 11.71C17.92 11.08 17.48 10 16.59 10ZM5 20C5 20.55 5.45 21 6 21H18C18.55 21 19 20.55 19 20C19 19.45 18.55 19 18 19H6C5.45 19 5 19.45 5 20Z" fill="currentColor"></path>
