--- a/career-item.html
+++ b/career-item.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686835518072">
+		<link rel="stylesheet" href="./css/main.css?v=1686841125116">
 	</head>
 	<body>
 		<!-- Header-->
@@ -237,55 +237,66 @@
 				</div>
 			</section>
 		</main>
-		<!-- Section Contacts-->
-		<section class="section-contacts">
-			<div class="container">
-				<div class="section-contacts__row">
-					<div class="section-contacts__form-box">
-						<form class="section-contacts__form" action="#">
-							<div class="section-contacts__form-layer section-contacts__form-layer--form">
-								<h2 class="h2 text-white section-contacts__title">Отправить резюме онлайн</h2>
-								<div class="section-contacts__form-row">
-									<div class="section-contacts__form-col section-contacts__form-col--inputs">
-										<div class="section-contacts__input-box">
-											<input class="form-control section-contacts__form-input section-contacts__form-input--name" type="text" name="name" placeholder="*Имя"/>
-										</div>
-										<div class="section-contacts__input-box">
-											<input class="form-control section-contacts__form-input section-contacts__form-input--tel" type="tel" name="phone" placeholder="*Телефон"/>
-										</div>
-										<div class="section-contacts__input-box">
-											<input class="form-control section-contacts__form-input section-contacts__form-input--email" type="email" name="email" placeholder="*Адрес электронной почты"/>
-										</div>
+		<!-- Section Contacts White-->
+		<section class="section-contacts-white" id="section-contacts">
+			<div class="container container--small">
+				<div class="section-contacts-white__row">
+					<form class="section-contacts-white__form" action="#">
+						<div class="section-contacts-white__form-layer section-contacts-white__form-layer--form">
+							<div class="section-contacts-white__feedback-wrap">
+								<div class="section-contacts-white__feedback-box">
+									<p class="section-contacts-white__feedback">Загрузите Ваше резюме – это повысит шансы на ответ</p>
+								</div>
+								<h2 class="section-contacts-white__title"> Отправить резюме онлайн</h2>
+							</div>
+							<div class="section-contacts-white__form-inputs">
+								<div class="section-contacts-white__form-row">
+									<div class="section-contacts-white__input-box">
+										<label class="section-contacts-white__label" for="name">Имя</label>
+										<input class="section-contacts-white__form-input section-contacts-white__form-input--name" type="text" name="name"/>
 									</div>
-									<div class="section-contacts__form-col section-contacts__form-col--message">
-										<div class="section-contacts__textarea-box">
-											<textarea class="form-control form-control--textarea section-contacts__form-textarea section-contacts__form-textarea--comment" name="message" placeholder="*Комментарий..."></textarea>
+									<div class="section-contacts-white__input-box">
+										<label class="section-contacts-white__label" for="phone">Номер телефона</label>
+										<div class="section-contacts-white__input-wrap"><span class="section-contacts-white__input-digit">+7</span>
+											<input class="section-contacts-white__form-input section-contacts-white__form-input--tel" type="tel" name="phone" placeholder="(000) 000-00-00"/>
 										</div>
 									</div>
 								</div>
-								<div class="section-contacts__form-row section-contacts__form-row--button">
-									<div class="section-contacts__form-col section-contacts__form-col--inputs">
-										<button class="button button--blue button--lg section-contacts__form-submit">Отправить</button>
-									</div>
-									<div class="section-contacts__form-col section-contacts__form-col--message">
-										<p class="section-contacts__form-upload-text">Загрузите Ваше резюме –  это повысит шансы на ответ</p>
-										<input class="section-contacts__form-upload-input" id="upload" type="file"/>
-										<label class="section-contacts__form-upload-label" for="upload">Загрузить файл</label>
-									</div>
+								<div class="section-contacts-white__input-box">
+									<label class="section-contacts-white__label" for="email">Адрес электронной почты</label>
+									<input class="section-contacts-white__form-input section-contacts-white__form-input--email" type="email" name="email"/>
 								</div>
-								<p class="section-contacts__error-message">Ошибка! Заполните обязательные поля.</p>
+								<div class="section-contacts-white__textarea-box">
+									<label class="section-contacts-white__label" for="message">Комментарий</label>
+									<textarea class="section-contacts-white__form-textarea section-contacts-white__form-textarea--comment" name="message"></textarea>
+								</div>
+								<input class="section-contacts-white__form-upload-input" id="upload" type="file"/>
+								<label class="section-contacts-white__form-upload-label" for="upload">
+									<svg class="section-contacts-white__upload-icon">
+										<use xlink:href="#download"></use>
+									</svg>Загрузить файл
+								</label>
+								<p class="section-contacts-white__form-upload-text">Максимальный размер файла — 100мб</p>
+								<div class="section-contacts-white__form-submit-box">
+									<button class="section-contacts-white__form-submit">Отправить</button>
+									<p class="section-contacts-white__error-message">Ошибка! Заполните обязательные поля.</p>
+								</div>
+								<p class="section-contacts-white__politics">
+									Нажимая кнопку, вы принимаете условия нашей политики
+									<a class="section-contacts-white__politics-link" href="#" target="_blank">в отношении обработки персональных данных.</a>
+								</p>
 							</div>
-							<div class="section-contacts__form-layer section-contacts__form-layer--success">
-								<svg class="section-contacts__submitted-icon">
-									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#submitted-form"></use>
-								</svg>
-								<h3 class="h2 text-blue section-contacts__submitted-title">Спасибо! Ваше сообщение принято.</h3>
-								<p class="text-blue section-contacts__submitted-text">В ближайшее время с Вами свяжется менеджер по указанным контактным данным.</p>
-								<button class="button--blue button--lg section-contacts__form-reset" type="reset">Написать еще</button>
-							</div>
-						</form>
-					</div>
-					<div class="section-contacts__img-box"><img class="section-contacts__img" src="images/common/warehouse.svg" alt="alt"/></div>
+						</div>
+						<div class="section-contacts-white__form-layer section-contacts-white__form-layer--success">
+							<svg class="section-contacts-white__submitted-icon">
+								<use xlink:href="images/svg-sprite/svg-sprite-static.svg#submitted-form"></use>
+							</svg>
+							<h3 class="h2 text-blue section-contacts-white__submitted-title">Спасибо! Ваше сообщение принято.</h3>
+							<p class="text-blue section-contacts-white__submitted-text">В ближайшее время с Вами свяжется менеджер по указанным контактным данным.</p>
+							<button class="button--blue button--lg section-contacts-white__form-reset" type="reset">Написать еще</button>
+						</div>
+					</form>
+					<div class="section-contacts-white__img-box"><img class="section-contacts-white__img show-desktop" src="images/common/warehouse-with-logo.svg" alt="alt"/><img class="section-contacts-white__img hide-desktop" src="images/common/warehouse-with-logo-mobile.svg" alt="alt"/></div>
 				</div>
 			</div>
 		</section>
@@ -299,29 +310,27 @@
 						<ul class="footer__nav-list">
 							<li class="footer__nav-elem"><a class="footer__nav-link footer__nav-link--active" href="#">Fashion</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Telecom</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Helthcare</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Healthcare</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Автомотив</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">POSM маркетинг</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">POSM</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">FMCG</a></li>
 						</ul>
 						<ul class="footer__logo-list footer__logo-list--desktop">
-							<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-squares.svg" alt="Major"></a></li>
-							<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-e.png" alt="Major"></a></li>
+							<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-t.png" alt="Major"></a></li>
+							<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-m.png" alt="Major"></a></li>
 						</ul>
 					</div>
 					<!-- Nav col-->
 					<div class="footer__col">
 						<p class="footer__nav-title">Услуги</p>
 						<ul class="footer__nav-list">
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Упаковка</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Фуллфилмент</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Ответственное хранение</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Таможенный склад</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Складская обработка</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Копакинг</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Производственная логистика</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Фулфилмент</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Маркировка Честный знак</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Кросс-докинг</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Еще услуга</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Еще название услуги</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Еще название услуги</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Еще название услуги</a></li>
 						</ul>
 					</div>
 					<!-- Nav col-->
@@ -330,35 +339,34 @@
 						<ul class="footer__nav-list footer__nav-list--show-laptop">
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">О нас</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Кейсы</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Пресс-релизы</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Наши склады</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Новости</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Терминалы</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Контакты</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Преимущества</a></li>
-							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Наши вакансии</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Вебинары</a></li>
+							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Карьера</a></li>
 						</ul>
 					</div>
 					<!-- Contact col-->
 					<div class="footer__col"><a class="footer__logo-link" href="/"><img class="footer__logo" src="images/common/logo-major-terminal.svg" alt="Major"></a>
-						<div class="footer__links-box"><a class="footer__link" href="tel:84957376006">8 (495) 737 60 06</a><a class="footer__link" href="mailto:info@major-terminal.ru">info@major-terminal.ru</a></div><a class="footer__link-contacts" href="/">Связаться с нами</a>
-						<div class="footer__social-box">
-							<div class="footer__social-wrapper">
-								<p class="footer__text">Мы в социальных сетях</p>
-								<ul class="footer__social social">
-									<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Youtube">
-											<svg class="social__link-icon">
-												<use xlink:href="#youtube"></use>
-											</svg></a></li>
-									<li class="social__elem"><a class="social__link" href="#" target="_blank" rel="noreferrer" aria-label="Telegram">
-											<svg class="social__link-icon">
-												<use xlink:href="#telegram"></use>
-											</svg></a></li>
-								</ul>
-							</div>
-							<ul class="footer__logo-list footer__logo-list--mobile">
-								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-squares.svg" alt="Major"></a></li>
-								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-major-e.png" alt="Major"></a></li>
-							</ul>
-						</div>
+						<div class="footer__links-box"><a class="footer__link" href="tel:84957376006">8 (495) 737 60 06</a><a class="footer__link" href="mailto:sales_mt@mjr.ru">sales_mt@mjr.ru</a></div><a class="footer__link-contacts" href="/">Связаться с нами</a>
+						<!--.footer__social-box
+						.footer__social-wrapper
+							p.footer__text Мы в социальных сетях
+							ul.footer__social.social
+								li.social__elem
+									a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Youtube")
+										+svg("youtube", true)(class="social__link-icon")
+								li.social__elem
+									a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Telegram")
+										+svg("telegram", true)(class="social__link-icon")
+						ul.footer__logo-list.footer__logo-list--mobile
+							li.footer__logo-list-elem
+								a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
+									img.footer__logo-list-img(src="images/common/logo-major-squares.svg", alt="Major")
+							li.footer__logo-list-elem
+								a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
+									img.footer__logo-list-img(src="images/common/logo-major-e.png", alt="Major")
+						-->
 					</div>
 				</div>
 				<!-- Copyright-->
@@ -371,10 +379,14 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686835518073"></script>
-		<script src="./js/main.js?v=1686835518073"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686841125118"></script>
+		<script src="./js/main.js?v=1686841125118"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
+	</symbol>
+	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="download">
+		<path d="M20 16.7428C21.2215 15.734 22 14.2079 22 12.5C22 9.46243 19.5376 7 16.5 7C16.2815 7 16.0771 6.886 15.9661 6.69774C14.6621 4.48484 12.2544 3 9.5 3C5.35786 3 2 6.35786 2 10.5C2 12.5661 2.83545 14.4371 4.18695 15.7935" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+		<path d="M8 16L12 12M12 12L16 16M12 12V21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
 	</symbol>
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="file-download">
 		<path d="M16.59 10H15V5C15 4.45 14.55 4 14 4H10C9.45 4 9 4.45 9 5V10H7.41C6.52 10 6.07 11.08 6.7 11.71L11.29 16.3C11.68 16.69 12.31 16.69 12.7 16.3L17.29 11.71C17.92 11.08 17.48 10 16.59 10ZM5 20C5 20.55 5.45 21 6 21H18C18.55 21 19 20.55 19 20C19 19.45 18.55 19 18 19H6C5.45 19 5 19.45 5 20Z" fill="currentColor"></path>
