--- a/service.html
+++ b/service.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686841128501">
+		<link rel="stylesheet" href="./css/main.css?v=1686861667208">
 	</head>
 	<body>
 		<!-- Header-->
@@ -520,24 +520,12 @@
 					<!-- Contact col-->
 					<div class="footer__col"><a class="footer__logo-link" href="/"><img class="footer__logo" src="images/common/logo-major-terminal.svg" alt="Major"></a>
 						<div class="footer__links-box"><a class="footer__link" href="tel:84957376006">8 (495) 737 60 06</a><a class="footer__link" href="mailto:sales_mt@mjr.ru">sales_mt@mjr.ru</a></div><a class="footer__link-contacts" href="/">Связаться с нами</a>
-						<!--.footer__social-box
-						.footer__social-wrapper
-							p.footer__text Мы в социальных сетях
-							ul.footer__social.social
-								li.social__elem
-									a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Youtube")
-										+svg("youtube", true)(class="social__link-icon")
-								li.social__elem
-									a.social__link(href="#", target="_blank", rel="noreferrer", aria-label="Telegram")
-										+svg("telegram", true)(class="social__link-icon")
-						ul.footer__logo-list.footer__logo-list--mobile
-							li.footer__logo-list-elem
-								a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
-									img.footer__logo-list-img(src="images/common/logo-major-squares.svg", alt="Major")
-							li.footer__logo-list-elem
-								a.footer__logo-list-link(href="#", target="_blank", rel="noreferrer")
-									img.footer__logo-list-img(src="images/common/logo-major-e.png", alt="Major")
-						-->
+						<div class="footer__social-box">
+							<ul class="footer__logo-list footer__logo-list--mobile">
+								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-t.png" alt="Major"></a></li>
+								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-m.png" alt="Major"></a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 				<!-- Copyright-->
@@ -550,8 +538,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686841128502"></script>
-		<script src="./js/main.js?v=1686841128502"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686861667209"></script>
+		<script src="./js/main.js?v=1686861667209"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
