--- a/service-list.html
+++ b/service-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686911449433">
+		<link rel="stylesheet" href="./css/main.css?v=1686916025107">
 	</head>
 	<body>
 		<!-- Header-->
@@ -170,6 +170,17 @@
 								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Контакты</a></li>
 								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Преимущества</a></li>
 								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Наши вакансии</a></li>
+							</ul>
+						</li>
+						<li class="header__mobile-menu-elem">
+							<div class="header__mobile-menu-link-box"><a class="header__mobile-menu-link" href="#">Язык</a>
+								<svg class="header__mobile-menu-dropdown">
+									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
+								</svg>
+							</div>
+							<ul class="header__mobile-menu-child-list">
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Русский</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Английский</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -342,8 +353,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686911449434"></script>
-		<script src="./js/main.js?v=1686911449434"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686916025108"></script>
+		<script src="./js/main.js?v=1686916025108"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
