--- a/industry-healthcare.html
+++ b/industry-healthcare.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686911448037">
+		<link rel="stylesheet" href="./css/main.css?v=1686916023979">
 	</head>
 	<body>
 		<!-- Header-->
@@ -172,6 +172,17 @@
 								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Наши вакансии</a></li>
 							</ul>
 						</li>
+						<li class="header__mobile-menu-elem">
+							<div class="header__mobile-menu-link-box"><a class="header__mobile-menu-link" href="#">Язык</a>
+								<svg class="header__mobile-menu-dropdown">
+									<use xlink:href="images/svg-sprite/svg-sprite-static.svg#menu-dropdown"></use>
+								</svg>
+							</div>
+							<ul class="header__mobile-menu-child-list">
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Русский</a></li>
+								<li class="header__mobile-menu-child-elem"><a class="header__mobile-menu-child-link" href="">Английский</a></li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -325,7 +336,7 @@
 						</svg>
 					</button>
 				</div>
-				<p class="section-description__text-block"><strong>Major Terminal</strong>
+				<p class="section-description__text-block section-description__text-block--mb"><strong>Major Terminal</strong>
 					помогает своим клиентам в сферы красоты и люкса разрабатывать продукты и модели цепочек поставок, отвечающие растущим запросам потребителей и высоким ожиданиям от бренда. Мы предлагаем широкий ассортимент высококачественных логистических услуг в сфере красоты и люкса, от многоканального выполнения заказов до глобальных транспортных или пере упаковочных решений, адаптированных к рынкам предметов роскоши, что позволяет брендам отражать свой имидж и выполнять обязательства перед людьми и экологией в своей цепочке поставок.
 				</p>
 				<div class="section-description__photo-slider swiper">
@@ -469,8 +480,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686911448039"></script>
-		<script src="./js/main.js?v=1686911448039"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1686916023980"></script>
+		<script src="./js/main.js?v=1686916023980"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
