--- a/case-item.html
+++ b/case-item.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686939962652">
+		<link rel="stylesheet" href="./css/main.css?v=1687173192093">
 	</head>
 	<body>
 		<!-- Header-->
@@ -254,10 +254,11 @@
 					<h2 class="h2 text-blue section-case-list__title">Другие кейсы</h2>
 				</div>
 				<div class="section-case-list__grid">
-					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line" href="#">
+					<!-- Card-->
+					<div class="section-case-list__card card card--cases card--with-tag-line">
 						<ul class="card__tag-list">
-							<li class="card__tag">Fashion</li>
-							<li class="card__tag">Складское хранение</li>
+							<li class="card__tag-wrapper"><a class="card__tag-link" href="#">Fashion</a></li>
+							<li class="card__tag cursor-pointer" onclick="location.href=&quot;https://ya.ru&quot;">Складское хранение</li>
 							<li class="card__tag">Вешальное хранение</li>
 							<li class="card__tag">Еще (7)</li>
 						</ul>
@@ -270,7 +271,8 @@
 								<use xlink:href="images/svg-sprite/svg-sprite-static.svg#chevron-right-big"></use>
 							</svg>
 						</div>
-						<div class="card__bg-box"><img class="card__bg" src="images/section-cases/bg1.jpg" alt></div></a>
+						<div class="card__bg-box"><img class="card__bg" src="images/section-cases/bg1.jpg" alt></div>
+					</div>
 					<!-- Card--><a class="section-case-list__card card card--cases card--with-tag-line" href="#">
 						<ul class="card__tag-list">
 							<li class="card__tag">Fashion</li>
@@ -401,8 +403,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686939962653"></script>
-		<script src="./js/main.js?v=1686939962653"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1687173192094"></script>
+		<script src="./js/main.js?v=1687173192094"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
