--- a/page-list.html
+++ b/page-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1686939964386">
+		<link rel="stylesheet" href="./css/main.css?v=1687173193898">
 	</head>
 	<body>
 		<!-- Header-->
@@ -213,6 +213,12 @@
 					<li class="list-arrow__elem"><a href="webinar2.html" target="_blank">Вебинар 2 // + моб версия</a></li>
 				</ul>
 			</section>
+			<div class="container">
+				<p>Видео для примера</p>
+				<div class="video">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/QK4xl5c8w7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				</div>
+			</div>
 		</main>
 		<!-- Section Contacts-->
 		<section class="section-contacts">
@@ -326,8 +332,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1686939964387"></script>
-		<script src="./js/main.js?v=1686939964387"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1687173193899"></script>
+		<script src="./js/main.js?v=1687173193899"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
