--- a/service.html
+++ b/service.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1687173195235">
+		<link rel="stylesheet" href="./css/main.css?v=1687180584706">
 	</head>
 	<body>
 		<!-- Header-->
@@ -251,15 +251,65 @@
 					<p class="section-service-range__text">Политика конфиденциальности персональных данных г. Москва «01» июня 2017 г. Настоящая Политика конфиденциальности персональных данных (далее – Политика конфиденциальности) действует в отношении всей информации, которую Сайт транспортно-логистической группы компаний Major, расположенный на доменном имени www.mjr.ru, может получить о Пользователе во время его использования.</p>
 				</div>
 				<!-- Section Partner-->
+				<!--section.section-partner.section-partner--type2.section-partner--bg-blue.container
+				.section-partner__box
+					.section-partner__nav-row
+						ul.section-partner__link-list
+							li.section-partner__link-elem
+								a.section-partner__link.section-partner__link--active(href='#', data-tab='1') О Major Terminal
+							li.section-partner__link-elem
+								a.section-partner__link(href='#', data-tab='2') 4PL оператор
+							li.section-partner__link-elem
+								a.section-partner__link(href='#', data-tab='3') Логопарк
+							li.section-partner__link-elem
+								a.section-partner__link(href='#', data-tab='4') Ценности
+						.dropdown.dropdown--navigate.section-partner__dropdown
+							.dropdown__value-box
+								input.dropdown__value(type='text', value='4PL оператор', disabled)
+								svg.dropdown__arrow
+									use(href='#chevron-dropdown')
+							ul.dropdown__options-list
+								li.dropdown__option.dropdown__option--selected(data-value='#', data-tab='1') Ответственное хранение и складская обработка товаров, услуги производственного аутсорсинга, транспортной дистрибуции, фулфилмент и работа с производственными маркетплейсами.
+								li.dropdown__option(data-value='4PL оператор') 4PL оператор
+								li.dropdown__option(data-value='#') Логопарк
+								li.dropdown__option(data-value='#') Ценности
+					.section-partner__content
+						.tabs2__content-height.tabs2__content.active(data-tab='1')
+							h2.h2.text-white.section-partner__title
+								| Ma
+								span.text-red j
+								| or Terminal – надежный поставщик всего комплекса складских услуг
+							p.section-partner__text.text-white Ответственное хранение и складская обработка товаров, услуги производственного аутсорсинга, транспортной дистрибуции, фулфилмент и работа с производственными маркетплейсами.
+						.tabs2__content-height.tabs2__content(data-tab='2')
+							h2.h2.text-white.section-partner__title
+								| Ma
+								span.text-red j
+								| or Terminal является частью 4PL-оператора Major Logistics
+							p.section-partner__text.text-white Специализируясь на выстраивании всей логистической цепи компаний, Major Terminal обладает колоссальным опытом и экспертизой в широком спектре складских услуг. Специализируясь на выстраивании всей логистической цепи компаний, Major Terminal обладает колоссальным опытом и экспертизой в широком спектре складских услуг. Специализируясь на выстраивании всей логистической цепи компаний, Major Terminal обладает колоссальным опытом и экспертизой в широком спектре складских услуг.
+						.tabs2__content-height.tabs2__content(data-tab='3')
+							h2.h2.text-white.section-partner__title
+								| Логопарк Ma
+								span.text-red j
+								| or Terminal – комплексное решение для хранения и перевозки товаров
+							p.section-partner__text.text-white Собственный таможенный склад и склады, оптимизированные для широкого спектра товаров, служба одного окна, отличная транспортная доступность и опытная команда – залог успеха вашего бизнеса.
+						.tabs2__content-height.tabs2__content(data-tab='4')
+							h2.h2.text-white.section-partner__title
+								| Клиенты – главная ценность Ma
+								span.text-red j
+								| or Terminal
+							p.section-partner__text.text-white Нашим клиентам гарантированы персональное внимание, многоуровневая поддержка, прозрачность всех процессов и возможность сосредоточится на своем бизнесе. О логистике позаботимся мы!
+						a.button.button--outline-white.button--md.section-partner__button(href='/about/') Подробнее о нас
+				-->
+				<!-- Section Partner-->
 				<div class="section-partner section-partner--type2 section-partner--bg-blue container">
 					<div class="section-partner__box">
 						<div class="section-partner__nav-row">
 							<ul class="section-partner__link-list">
-								<li class="section-partner__link-elem"><a class="section-partner__link section-partner__link--active" href="#">FBO и FBS</a></li>
-								<li class="section-partner__link-elem"><a class="section-partner__link" href="#">Возможности интеграций</a></li>
-								<li class="section-partner__link-elem"><a class="section-partner__link" href="#">Омниканальность</a></li>
+								<li class="section-partner__link-elem"><a class="section-partner__link section-partner__link--active" href="#" data-tab="1">FBO и FBS</a></li>
+								<li class="section-partner__link-elem"><a class="section-partner__link" href="#" data-tab="2">Возможности интеграций</a></li>
+								<li class="section-partner__link-elem"><a class="section-partner__link" href="#" data-tab="3">Омниканальность</a></li>
 							</ul>
-							<div class="dropdown dropdown--text-blue dropdown--navigate section-partner__dropdown">
+							<div class="dropdown dropdown--text-blue section-partner__dropdown">
 								<div class="dropdown__value-box">
 									<input class="dropdown__value" type="text" value="FBO и FBS" disabled>
 									<svg class="dropdown__arrow">
@@ -267,20 +317,40 @@
 									</svg>
 								</div>
 								<ul class="dropdown__options-list">
-									<li class="dropdown__option dropdown__option--selected" data-value="#">FBO и FBS</li>
-									<li class="dropdown__option" data-value="#">Возможности интеграций</li>
-									<li class="dropdown__option" data-value="#">Омниканальность</li>
+									<li class="dropdown__option dropdown__option--selected" data-value="FBO и FBS" data-tab="1">FBO и FBS</li>
+									<li class="dropdown__option" data-value="Возможности интеграций" data-tab="2">Возможности интеграций</li>
+									<li class="dropdown__option" data-value="Омниканальность" data-tab="3">Омниканальность</li>
 								</ul>
 							</div>
 						</div>
 						<div class="section-partner__content">
-							<div class="section-partner__row">
-								<div class="section-partner__col section-partner__col--content">
-									<h3 class="h2 section-partner__title hide-mobile">Работа по FBS и FBO на<br>одном складе</h3>
-									<p class="section-partner__text">Продавать на маркетплейсах можно по разному — хранить товары у себя или отправить их на склад онлайн-площадки, которая возьмет на себя обработку заказов и их упаковку.<br><br><span class="text-weight-light">Major Terminal работает по любой схеме и может как хранить товары у себя на складе, так и забирать их с вашего склада для дальнейшей обработки.</span></p><a class="button button--blue-dark button--md section-partner__button hide-mobile" href="#">Оставить заявку</a><a class="button button--outline-blue button--md section-partner__button hide-desktop" href="#">Оставить заявку</a>
+							<div class="tabs2__content-height tabs2__content active" data-tab="1">
+								<div class="section-partner__row">
+									<div class="section-partner__col section-partner__col--content">
+										<h3 class="h2 section-partner__title hide-mobile">Работа по FBS и FBO на<br>одном складе 1</h3>
+										<p class="section-partner__text">Продавать на маркетплейсах можно по разному — хранить товары у себя или отправить их на склад онлайн-площадки, которая возьмет на себя обработку заказов и их упаковку 1.<br><br><span class="text-weight-light">Major Terminal работает по любой схеме и может как хранить товары у себя на складе, так и забирать их с вашего склада для дальнейшей обработки.</span></p><a class="button button--outline-blue button--md section-partner__button hide-desktop" href="#">Оставить заявку</a>
+									</div>
+									<div class="section-partner__col section-partner__col--img"><img class="section-partner__image mb-auto" src="images/section-partner/img4.svg" alt></div>
 								</div>
-								<div class="section-partner__col section-partner__col--img"><img class="section-partner__image" src="images/section-partner/img2.svg" alt></div>
 							</div>
+							<div class="tabs2__content-height tabs2__content" data-tab="2">
+								<div class="section-partner__row">
+									<div class="section-partner__col section-partner__col--content">
+										<h3 class="h2 section-partner__title hide-mobile">Работа по FBS и FBO на<br>одном складе 2 Работа по FBS и FBO на Работа по FBS и FBO на</h3>
+										<p class="section-partner__text">Продавать на маркетплейсах можно по разному — хранить товары у себя или отправить их на склад онлайн-площадки, которая возьмет на себя обработку заказов и их упаковку 2.<br><br><span class="text-weight-light">Major Terminal работает по любой схеме и может как хранить товары у себя на складе, так и забирать их с вашего склада для дальнейшей обработки.</span></p><a class="button button--outline-blue button--md section-partner__button hide-desktop" href="#">Оставить заявку</a>
+									</div>
+									<div class="section-partner__col section-partner__col--img"><img class="section-partner__image mb-auto" src="images/section-partner/img4.svg" alt></div>
+								</div>
+							</div>
+							<div class="tabs2__content-height tabs2__content" data-tab="3">
+								<div class="section-partner__row">
+									<div class="section-partner__col section-partner__col--content">
+										<h3 class="h2 section-partner__title hide-mobile">Работа по FBS и FBO на<br>одном складе 3</h3>
+										<p class="section-partner__text">Продавать на маркетплейсах можно по разному — хранить товары у себя или отправить их на склад онлайн-площадки, которая возьмет на себя обработку заказов и их упаковку 3.<br><br><span class="text-weight-light">Major Terminal работает по любой схеме и может как хранить товары у себя на складе, так и забирать их с вашего склада для дальнейшей обработки.</span></p><a class="button button--outline-blue button--md section-partner__button hide-desktop" href="#">Оставить заявку</a>
+									</div>
+									<div class="section-partner__col section-partner__col--img"><img class="section-partner__image mb-auto" src="images/section-partner/img4.svg" alt></div>
+								</div>
+							</div><a class="button button--blue-dark button--md section-partner__button hide-mobile" href="#">Оставить заявку</a>
 						</div>
 					</div>
 				</div>
@@ -549,8 +619,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1687173195236"></script>
-		<script src="./js/main.js?v=1687173195236"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1687180584707"></script>
+		<script src="./js/main.js?v=1687180584707"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
