--- a/page-list.html
+++ b/page-list.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1687259695817">
+		<link rel="stylesheet" href="./css/main.css?v=1687270059013">
 	</head>
 	<body>
 		<!-- Header-->
@@ -270,8 +270,7 @@
 			<div class="container">
 				<div class="footer__row">
 					<!-- Nav col-->
-					<div class="footer__col">
-						<p class="footer__nav-title">Индустрии</p>
+					<div class="footer__col"><a class="footer__nav-title" href="#">Индустрии</a>
 						<ul class="footer__nav-list">
 							<li class="footer__nav-elem"><a class="footer__nav-link footer__nav-link--active" href="#">Fashion</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Telecom</a></li>
@@ -286,8 +285,7 @@
 						</ul>
 					</div>
 					<!-- Nav col-->
-					<div class="footer__col">
-						<p class="footer__nav-title">Услуги</p>
+					<div class="footer__col"><a class="footer__nav-title" href="#">Услуги</a>
 						<ul class="footer__nav-list">
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Ответственное хранение</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Складская обработка</a></li>
@@ -299,8 +297,7 @@
 						</ul>
 					</div>
 					<!-- Nav col-->
-					<div class="footer__col">
-						<p class="footer__nav-title">Major Terminal</p>
+					<div class="footer__col"><a class="footer__nav-title" href="#">Major Terminal</a>
 						<ul class="footer__nav-list footer__nav-list--show-laptop">
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">О нас</a></li>
 							<li class="footer__nav-elem"><a class="footer__nav-link" href="#">Кейсы</a></li>
@@ -316,8 +313,8 @@
 						<div class="footer__links-box"><a class="footer__link" href="tel:84957376006">8 (495) 737 60 06</a><a class="footer__link" href="mailto:sales_mt@mjr.ru">sales_mt@mjr.ru</a></div><a class="footer__link-contacts" href="/">Связаться с нами</a>
 						<div class="footer__social-box">
 							<ul class="footer__logo-list footer__logo-list--mobile">
-								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-t.png" alt="Major"></a></li>
-								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="#" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-m.png" alt="Major"></a></li>
+								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="https://mjr.ru/" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-t.png" alt="Major"></a></li>
+								<li class="footer__logo-list-elem"><a class="footer__logo-list-link" href="https://major-express.ru/" target="_blank" rel="noreferrer"><img class="footer__logo-list-img" src="images/common/logo-m.png" alt="Major"></a></li>
 							</ul>
 						</div>
 					</div>
@@ -332,8 +329,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1687259695817"></script>
-		<script src="./js/main.js?v=1687259695817"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1687270059013"></script>
+		<script src="./js/main.js?v=1687270059013"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 8" id="chevron-dropdown">
 		<path d="M1 1.28394L6 5.96615L11 1.28394" stroke="#00162F" stroke-width="2" stroke-linecap="round"></path>
 	</symbol>
